# rust-esp32-std-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.py  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  Makefile  README.md  Xargo.toml  build.rs  cargo.py  platformio.ini  pthread_destructor_fix.diff  qemu.sh  sdkconfig  sdkconfig.default.esp32s2-ulp-example  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2-ulp-example
.cargo/: config.toml
.github/.workflows/: ci.yaml
.github/workflows/: ci.yml
rust/: Cargo.toml
rust-esp32-std-demo/: Cargo.toml  build.rs  partitions.csv  qemu.sh
rust-esp32-std-demo/src/: main.rs
rust/.cargo/: config
rust/src/: lib.rs  wip.rs
src/: cargo.c  lib.rs  main.c  main.rs  wip.c
test_lib/: Cargo.toml
test_lib/src/: lib.rs
ulp/: rust-esp32-ulp-blink
