[package]
name = "rust-esp32-std-demo"
version = "0.20.1"
authors = ["ivmarkov"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/ivmarkov/rust-esp32-std-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.dev]
opt-level = "s"

[features]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]

# Enable this feature if you are building for QEMU
qemu = []

# Enable this feature in case you have a Kaluga board and would like to see a LED screen demo
kaluga = []

# Enable this feature in case you have a TTGO board and would like to see a LED screen demo
ttgo = []

# Enable this feature in case you have an ESP32S3-USB-OTG board and would like to see a LED screen demo
heltec = []

esp32s3_usb_otg = []

# Enable this feature in case you have an RMII IP101 Ethernet adapter
ip101 = []

# Enable this feature in case you have an SPI W5500 Ethernet adapter
w5500 = []

experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.24.3", features = ["binstart"] }
embedded-svc = "0.12"
esp-idf-svc = "0.28.1"
esp-idf-hal = "0.23.2"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
smol = "1.2"

[build-dependencies]
embuild = "0.25"
anyhow = "1"

# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }
