[package]
name = "rust-esp32-std-hello"
version = "0.1.0"
authors = ["ivmarkov"]
edition = "2018"

[dependencies]
libc = "0.2.80"
#esp-idf-sys = {git = "https://github.com/ivmarkov/esp-idf-sys.git"}
esp-idf-sys = {path = "../../esp-idf-sys"}
rocket = "0.4.6"
indexmap = "=1.2" # Rocket 0.4.6 fails to compile with later versions...

[patch.crates-io]
time = { git = 'https://github.com/ivmarkov/time.git', branch = 'master' }
#chrono = { git = 'https://github.com/ivmarkov/chrono.git', branch = 'main' } # TODO
getrandom = { git = "https://github.com/ivmarkov/getrandom.git", branch = "0.1" }

[lib]
crate-type = ["staticlib"]
