[package]
name = "rust-esp32-std-hello"
version = "0.1.0"
authors = ["ivmarkov"]
edition = "2018"

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
anyhow = "*"
#embedded-svc = {version = "*", path = "../../embedded-svc"}
embedded-svc = {version = "*", git = "https://github.com/ivmarkov/embedded-svc.git"}
#esp-idf-svc = {version = "*", path = "../../esp-idf-svc"}
esp-idf-svc = {version = "*", git = "https://github.com/ivmarkov/esp-idf-svc.git"}
libc = "0.2.80"
#rocket = "0.4.6"
#indexmap = "=1.2" # Rocket 0.4.6 fails to compile with later versions...
log = "0.4"

[patch.crates-io]
time = { git = 'https://github.com/ivmarkov/time.git', branch = 'master' }
#chrono = { git = 'https://github.com/ivmarkov/chrono.git', branch = 'main' } # TODO
getrandom = { git = "https://github.com/ivmarkov/getrandom.git", branch = "0.1" }

[lib]
crate-type = ["staticlib"]
